# arduino_simulator

./: .gitignore  Cargo.toml  ControllerSim.avrsim.json  README.md  __init__.py  behavior.py  board.schema.json  board_models.py  cli.py  dsl.py  kicad_layout.py  kicad_pcb.py  kicad_sexpr.py  lang.py  layout.py  rust_cpu_merged.profdata  test_behavior.py  test_board_models.py  test_kicad_pcb.py
.github/workflows/: build-kicad-plugin.yml
archive/: live_modules_experiment_20260325.rs
coverage/: workspace_coverage_summary_2026-03-27.html  workspace_source_coverage.tsv
docs/: index.html
examples/: Example-Simulation.avrsim.json
examples/ino/dewpoint_controller/: can_air_protocol.cpp  can_air_protocol.h  commissioning_state.cpp  commissioning_state.h  commissioning_storage.cpp  commissioning_storage.h  control_safety.cpp  control_safety.h  controller_can_bus.cpp  controller_can_bus.h  controller_sensor_helpers.cpp  controller_sensor_helpers.h  controller_ui.cpp  controller_ui.h  dewpoint_controller.ino  dewpoint_policy.cpp  dewpoint_policy.h  lcd_ui_framework.cpp  lcd_ui_framework.h  max31865_rtd.cpp  (+10 more)
examples/pcbs/: air_node.kicad_pcb  arduino_mega_2560_rev3e.kicad_pcb  arduino_nano_v3_3.kicad_pcb  mega_r3_sidecar_controller_rev_a.kicad_pcb
kicad_plugin/: README.md  build_dist.py  collect_binaries.py  install_kicad_plugin.py
kicad_plugin/arduino_simulator_kicad_plugin/: __init__.py  core.py  plugin.py
kicad_plugin/tests/: test_build_dist.py  test_core.py
pages/: arduino-simulator-web-d5f0d1ab62b7985c.js
profiles/: air_node.behavior.avrsim  mega_r3_sidecar_controller_rev_a.behavior.avrsim
rust_behavior/: Cargo.toml  README.md
rust_behavior/builtins/: ads1115_breakout_behavior.behavior.avrsim.json  aht20_breakout_behavior.behavior.avrsim.json  bh1750_breakout_behavior.behavior.avrsim.json  bme280_breakout_behavior.behavior.avrsim.json  bmp280_breakout_behavior.behavior.avrsim.json  gy_sht31_d_behavior.behavior.avrsim.json  ina219_breakout_behavior.behavior.avrsim.json  lc_lm358_pwm_to_0_10v_behavior.behavior.avrsim.json  max31855_breakout_behavior.behavior.avrsim.json  max31865_breakout_behavior.behavior.avrsim.json  max6675_breakout_behavior.behavior.avrsim.json  mcp2515_tja1050_can_module_behavior.behavior.avrsim.json  mpu6050_breakout_behavior.behavior.avrsim.json  vl53l0x_breakout_behavior.behavior.avrsim.json
rust_behavior/src/: builtins.rs  lib.rs
rust_board/: Cargo.toml  README.md
rust_board/builtins/: ads1115_breakout.board.json  aht20_breakout.board.json  arduino_mega_2560_rev3.board.json  arduino_nano_v3.board.json  bh1750_breakout.board.json  bme280_breakout.board.json  bmp280_breakout.board.json  gy_sht31_d.board.json  ina219_breakout.board.json  lc_lm358_pwm_to_0_10v.board.json  max31855_breakout.board.json  max31865_breakout.board.json  max6675_breakout.board.json  mcp2515_tja1050_can_module.board.json  mpu6050_breakout.board.json  vl53l0x_breakout.board.json
rust_board/src/: dsl.rs  kicad_layout.rs  kicad_pcb.rs  lang.rs  layout.rs  lib.rs  models.rs  sexpr.rs
rust_cpu/: Cargo.toml  README.md
rust_cpu/src/: bus.rs  config.rs  cpu.rs  error.rs  instruction.rs  lib.rs
rust_cpu/tests/: avr_datasheet_instruction_tests.rs  avr_instruction_conformance.rs  cpu_api_surface_tests.rs  cpu_instruction_tests.rs  python_cpu_parity.rs
rust_gui/: Cargo.toml  README.md
rust_gui/assets/: ATTRIBUTION.md
rust_gui/src/: app.rs  arduino.rs  board_editor.rs  lib.rs  main.rs  pcb_view.rs  simulation.rs
rust_kicad/: Cargo.toml  README.md
rust_kicad/src/: lib.rs  main.rs
rust_mcu/: Cargo.toml  README.md
rust_mcu/src/: atmega2560.rs  atmega328p.rs  common.rs  lib.rs
rust_mcu/tests/: runtime_bus_tests.rs
rust_project/: Cargo.toml  README.md
rust_project/src/: assembly_bundle.rs  autobind.rs  behavior_definition.rs  definitions.rs  document.rs  error.rs  lib.rs  paths.rs  shared.rs  simulation_project.rs
rust_runtime/: Cargo.toml  README.md
rust_runtime/src/: cli.rs  firmware.rs  lib.rs  main.rs  runtime.rs  simulator.rs  tui.rs
rust_runtime/tests/: cli_runtime.rs
rust_web/: Cargo.toml  README.md  index.html
rust_web/example_firmware/: mega_pin_sweep.hex  nano_pin_sweep.hex
rust_web/src/: app.rs  board_view.rs  example_firmware.rs  firmware.rs  lib.rs  main.rs  pcb_view.rs  runtime.rs
scripts/: generate_workspace_coverage_html.py
(+2 files in other folders)
