[package]
name = "rust_kicad"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KiCad adapter CLI for arduino_simulator"

[lib]
path = "src/lib.rs"

[[bin]]
name = "arduino-simulator-kicad"
path = "src/main.rs"

[dependencies]
rust_board = { path = "../rust_board" }
rust_project = { path = "../rust_project" }

[dev-dependencies]
tempfile = "3"
