[package]
name = "rust_project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Simulation project model and mapping format for arduino_simulator"

[lib]
path = "src/lib.rs"

[dependencies]
rust_board = { path = "../rust_board" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
