[package]
name = "rust_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone native AVR runtime and CLI for arduino_simulator"

[lib]
path = "src/lib.rs"

[[bin]]
name = "arduino-simulator"
path = "src/main.rs"

[dependencies]
rust_cpu = { path = "../rust_cpu" }
rust_mcu = { path = "../rust_mcu" }
serde = { version = "1", features = ["derive"] }
