[package]
name = "rust_web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser frontend for arduino_simulator"

[lib]
path = "src/lib.rs"

[[bin]]
name = "arduino-simulator-web"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
rfd = "0.15"
rust_board = { path = "../rust_board" }
rust_cpu = { path = "../rust_cpu" }
rust_mcu = { path = "../rust_mcu" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
